Version SVN-    2008-

	* fixed DLNA string for audio and image files
	* extract mp4/m4a metadata (patch from Kurosawa Hiroyuki)
	* fixed bug #1837741 - Ogg files don't stream
	* fixed bug #1862357 - iTunes path not parsed correctly Mac OS X 10.5
	* fixed bug #1819645 - fuppesd is failing to background fuppes
  * fixed bug #1863196 - unsafe use of std::string
  * fixed bug #1870194 - OS X iTunes xml file paths
	* mp3 decoder (madlib)
	* "external command" transcoder

Version SVN-578 2007-12-19

	NOTE: please remove your fuppes.db

	* fixed ffmpeg compilation for 
    older ffmpeg versions (patch from Klaus S. Madsen)
    and with missing libswscale
	* fixed FAAD decoder for Ubuntu (patch from Klaus S. Madsen)
  * fixed stupid buffer overflow in 
	  FFmepgWrapper (patch from Jared D. McNeill)
	* MediaServer description values configurable
	* libnotify support without gnome-panel-applet (#1814615)
	* fixed #1822462 (ImageMagick includes)
	* fixed #1815588 (segfault when en-/decoder fails to load)
	* added optional refId support for virtual folders
	* support for Yamaha RX-N600
	* #1838835 temp dir configurable
  * pass additional ffmpeg arguments (add <ffmpeg_params> node)


Version SVN-549 2007-10-04
  * fixed UPnPBrowse for virtual devices
	* speedup database creation (items and vfolders)
	* fixed virtual folder creation
  * fixed size calculation in WAV and PCM encoder
	* large file support
	* database update: add new files
	* minor bugfixes and enhancements

Version SVN-530 2007-09-20
  * fixed WAV and PCM encoder
  * speedup transcoding
    removed lot's of memory re-/allocations  
  * fixed sleep-bug thanks to Tim Rightnour
  * fixed playlist creation bug thanks again to Tim Rightnour
  * fixed malformed default configuration
  * fixed virtual folder creation

Version SVN-524 2007-09-14
  * AAC/MP4 decoder
  * fixed Deadlock on FreeBSD
  * lame quality configurable
  * id3v1 tag in transcoded files
  * new file settings flag "extract_metadata"